# mapreduce-plonky2

./: .env  .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  devenv.nix  rust-toolchain  rust-toolchain.toml  rustc-ice-2024-11-04T12_36_50-74186.txt  rustc-ice-2024-11-04T12_37_01-74253.txt  rustc-ice-2024-11-04T12_37_13-74307.txt  shell.nix
common/: Cargo.toml
common/src/: array.rs  circuit.rs  eth.rs  keccak.rs  lib.rs  mpt_sequential.rs  poseidon.rs  rlp.rs  types.rs  utils.rs
common/src/benches/: array_access.rs  mod.rs  recursion.rs
common/src/group_hashing/: curve_add.rs  mod.rs  sswu_gadget.rs
common/src/merkle_tree/: backup.rs  mod.rs  state_tree.rs
groth16-framework/: Cargo.toml  build.rs
groth16-framework/groth16_query/: query_input.json  query_output.json  verifier.sol
groth16-framework/groth16_simple/: verifier.sol
groth16-framework/src/: compiler.rs  debug.rs  lib.rs  proof.rs  prover.rs  test_utils.rs  utils.rs  verifier.rs
groth16-framework/src/evm/: executor.rs  mod.rs  utils.rs
groth16-framework/src/prover/: groth16.rs  groth16_prover.rs  mod.rs
groth16-framework/src/verifier/: evm.rs  evm_verifier.rs  groth16.rs  mod.rs
groth16-framework/test_data/: Groth16VerifierExtension.sol  Groth16VerifierExtensions.sol  TestGroth16Verifier.sol  query2.abi  query2.sol  query2_verifier.sol  verifier.abi  verifier.sol
groth16-framework/tests/: group_hashing.rs  keccak.rs  query.rs  query2.rs
groth16-framework/tests/common/: context.rs  io.rs  mod.rs  query.rs  utils.rs
inspect/: Cargo.toml
inspect/src/: index.rs  main.rs  repl.rs  rows.rs
integration-tests/: Cargo.toml
integration-tests/src/: context.rs  lib.rs  utils.rs  values_extraction.rs
integration-tests/tests/: db_creation.rs
mapreduce-plonky2/: Cargo.toml
mapreduce-plonky2/examples/: integration.rs
mapreduce-plonky2/src/: api.rs  array.rs  circuit.rs  eth.rs  groth16_tests.rs  keccak.rs  lib.rs  merkle.rs  mpt_sequential.rs  poseidon.rs  rlp.rs  types.rs  utils.rs  verifier_gadget.rs
mapreduce-plonky2/src/benches/: recursion.rs
mapreduce-plonky2/src/block/: mod.rs  public_inputs.rs  tests.rs
mapreduce-plonky2/src/group_hashing/: field_to_curve.rs  mod.rs  sswu_value.rs  utils.rs
mapreduce-plonky2/src/integration/: mod.rs
mapreduce-plonky2/src/merkle_tree/: merkle_tree.rs  mod.rs  state_tree.rs
mapreduce-plonky2/src/query2/: api.rs  leaf.rs  mod.rs  tests.rs
mapreduce-plonky2/src/state/: branch.rs  mod.rs
mapreduce-plonky2/src/storage/: digest_equal.rs  key.rs  length_extract.rs  length_match.rs  mod.rs
mapreduce-plonky2/src/transaction/: header.rs  proof.rs
mp2-common/: Cargo.toml
mp2-common/src/: array.rs  digest.rs  eth.rs  git.rs  hash.rs  keccak.rs  lib.rs  mpt_sequential.rs  poseidon.rs  proof.rs  public_inputs.rs  rlp.rs  storage_key.rs  types.rs  u256.rs  utils.rs
mp2-common/src/benches/: array_access.rs  mod.rs  recursion.rs
mp2-common/src/group_hashing/: curve_add.rs  field_to_curve.rs  mod.rs  sswu_gadget.rs  sswu_value.rs  utils.rs
mp2-common/src/merkle_tree/: state_tree.rs
mp2-common/src/mpt_sequential/: key.rs  leaf_or_extension.rs  mod.rs  utils.rs
mp2-common/src/serialization/: circuit_data_serialization.rs  mod.rs  targets_serialization.rs
mp2-test/: Cargo.toml
mp2-test/src/: cells_tree.rs  circuit.rs  eth.rs  lib.rs  mpt_sequential.rs  utils.rs
mp2-v1/: Cargo.toml  Makefile  README.md  build.rs  rustfmt.toml
mp2-v1/src/: api.rs  foo.rs  lib.rs  public_inputs.rs  types.rs
mp2-v1/src/block_extraction/: block.rs  circuit.rs  mod.rs  public_inputs.rs  tests.rs
mp2-v1/src/cells_tree/: api.rs  empty_node.rs  full_node.rs  leaf.rs  mod.rs  partial_node.rs  public_inputs.rs
mp2-v1/src/contract_extraction/: api.rs  branch.rs  extension.rs  leaf.rs  mod.rs  public_inputs.rs
mp2-v1/src/extraction/: branch.rs  extension.rs  key.rs  leaf_mapping.rs  leaf_single.rs  mod.rs  public_inputs.rs
mp2-v1/src/final_extraction/: api.rs  base_circuit.rs  dummy_circuit.rs  lengthed_circuit.rs  merge.rs  merge_circuit.rs  mod.rs  public_inputs.rs  receipt_circuit.rs  simple_circuit.rs
mp2-v1/src/indexing/: block.rs  cell.rs  cell_tree.rs  index.rs  index_tree.rs  mod.rs  row.rs  row_tree.rs
mp2-v1/src/length_extraction/: api.rs  branch.rs  extension.rs  leaf.rs  leaf_mapping.rs  leaf_tests.rs  leaf_value.rs  mod.rs  public_inputs.rs  tests.rs
mp2-v1/src/query/: batching_planner.rs  mod.rs  planner.rs
mp2-v1/src/receipt_extraction/: leaf.rs  mod.rs  public_inputs.rs
mp2-v1/src/values_extraction/: api.rs  branch.rs  dummy.rs  empty.rs  extension.rs  key.rs  leaf_mapping.rs  leaf_mapping_of_mappings.rs  leaf_receipt.rs  leaf_single.rs  merge.rs  mod.rs  planner.rs  public_inputs.rs
mp2-v1/store/: test_proofs.store
mp2-v1/test-contracts/: foundry.toml
mp2-v1/test-contracts/data/: init_simple.sh
mp2-v1/test-contracts/script/: DeploySimple.s.sol
mp2-v1/test-contracts/src/: Event.sol  Simple.abi  Simple.sol
mp2-v1/tests/: README.md  db_creation_tests.rs  integrated_tests.rs  storage_test.rs
mp2-v1/tests/bindings/: simple.rs
mp2-v1/tests/common/: benchmarker.rs  block_extraction.rs  celltree.rs  context.rs  contract_extraction.rs  final_extraction.rs  index_tree.rs  ivc.rs  length_extraction.rs  local_node.rs  mod.rs  proof_storage.rs  receipt_trie.rs  (+5 more)
parsil/: Cargo.toml
parsil/src/: assembler.rs  bracketer.rs  circuit.rs  dsl.rs  errors.rs  execute.rs  executor.rs  expand.rs  inject.rs  insulator.rs  isolator.rs  lib.rs  main.rs  parser.rs  placeholders.rs  queries.rs  resolve.rs  symbols.rs  tests.rs  utils.rs  validate.rs  visitor.rs
parsil/tests/: context.json
recursion-framework/: Cargo.toml
recursion-framework/src/: circuit_builder.rs  framework.rs  framework_testing.rs  lib.rs
recursion-framework/tests/: integration.rs
ryhope/: Cargo.toml  README.org  devenv.nix
ryhope/src/: error.rs  lib.rs  main.rs  repl.rs
tools/: Cargo.toml  upload-s3.pl
tools/src/: gen-params.rs  lib.rs
verifiable-db/: Cargo.toml
verifiable-db/src/: api.rs  extraction.rs  lib.rs  test_utils.rs
(+382 files in other folders)
