[workspace]
members = [
    "mapreduce-plonky2",
    "recursion-framework",
    "groth16-framework",
    "gnark-utils",
]
resolver = "2"

[profile.release]
opt-level = 3
incremental = true

[profile.bench]
opt-level = 3

[patch.crates-io]
plonky2 = { git = "https://github.com/Lagrange-Labs/plonky2" }
