[workspace]
members = [
  "gnark-utils",
  # "groth16-framework", // temporary move out of workspace since we haven't yet v1 circuits to be proven with groth16
  "mp2-common",
  "mp2-test",
  "mp2-v1",
  "parsil",
  "ryhope",
  "recursion-framework",
  "verifiable-db"
]
resolver = "2"

[workspace.dependencies]
alloy = { version = "0.1", default-features = false, features = [
  "contract",
  "node-bindings",
  "providers",
  "network",
  "signer-local",
  "sol-types",
  "rpc",
  "rpc-types",
  "consensus",
  "rlp",
  "transports",
  "transport-http",
  "reqwest",
] }
anyhow = "1.0"
base64 = "0.22"
bincode = "1.3"
bytes = "1.5"
csv = "1.3"
env_logger = "0.11"
# TODO: see if we can revert to upstream repo: originally used
# to fetch proof with "node" instead of already encoded struct
eth_trie = { git = "https://github.com/nikkolasg/eth-trie.rs" }
ethereum-types = "0.14"
glob = "0.3"
gobuild = "0.1.0-alpha.1"
hashbrown = "0.14"
hex = "0.4"
itertools = "0.12"
log = "0.4"
num = "0.4"
paste = "1.0"
plonky2 = "0.2.2"
# supporting latest plonky2
plonky2_crypto = { git = "https://github.com/Lagrange-Labs/plonky2-crypto" }
plonky2_ecdsa = { git = "https://github.com/Lagrange-Labs/plonky2-ecdsa" }
plonky2_ecgfp5 = { git = "https://github.com/Lagrange-Labs/plonky2-ecgfp5" }
plonky2_monolith = "0.1.0"
plonky2x = { git = "https://github.com/Lagrange-Labs/succinctx", branch = "fix-build" }
postgres = { version = "0.19.7", features = ["with-serde_json-1"] }
rand = "0.8"
revm = { version = "3.5", default-features = false }
rlp = "0.5"
rmp-serde = "1.1"
rstest = "0.18"
serde = { version = "1.0", features = [ "derive" ] }
serde_arrays = "0.1"
serde_json = "1.0"
serial_test = "3.0"
sha3 = "0.10"
tokio = { version = "1.34", features = ["macros", "rt-multi-thread"] }

# just for test
ethers = { git = "https://github.com/Lagrange-Labs/ethers-rs", default-features = false, features = [
  "rustls",
], branch = "get-proof-0x" }

[profile.dev]
# Reference: https://doc.rust-lang.org/cargo/reference/profiles.html#dev
# Proving is too slow without optimizations
opt-level = 3

[profile.release]
# Reference: https://doc.rust-lang.org/cargo/reference/profiles.html#release
# Proving is a bottleneck, enable agressive optimizations.
# Reference: https://nnethercote.github.io/perf-book/build-configuration.html#codegen-units
codegen-units = 1
lto = "fat"

[patch.crates-io]
plonky2 = { git = "https://github.com/Lagrange-Labs/plonky2", branch = "upstream" }
plonky2_monolith = { git = "https://github.com/Lagrange-Labs/monolith" }
plonky2_field = { git = "https://github.com/Lagrange-Labs/plonky2", branch = "upstream" }
