[workspace]
members = [
  "gnark-utils",
  "groth16-framework",
  "inspect",
  "mp2-common",
  "mp2-test",
  "mp2-v1",
  "parsil",
  "ryhope",
  "recursion-framework",
  "verifiable-db",
]
resolver = "2"

[workspace.dependencies]
alloy = { version = "0.15", default-features = false, features = [
  "consensus",
  "contract",
  "getrandom",
  "network",
  "node-bindings",
  "providers",
  "reqwest",
  "rlp",
  "rpc",
  "rpc-types",
  "signer-local",
  "sol-types",
  "transport-http",
  "transports",
  "postgres",
] }
anyhow = "1.0"
base64 = "0.22"
bb8 = "0.9"
bb8-postgres = "0.9"
bincode = "1.3"
camelpaste = "0.1"
clap = { version = "4.5", features = ["derive"] }
colored = "3"
csv = "1.3"
delegate = "0.13"
derive_more = { version = "2", features = ["constructor", "deref", "from", "into"] }
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
env_logger = "0.11"
envconfig = "0.11"
ethereum-types = "0.14"
eth_trie = { git = "https://github.com/nikkolasg/eth-trie.rs" }
futures = "0.3"
git-version = "0.3"
glob = "0.3"
gobuild = "0.1.0-alpha.1"
hashbrown = "0.15"
hex = "0.4"
itertools = "0.14"
jammdb = "0.11.0"
lazy_static = "1.5.0"
log = "0.4"
num = "0.4"
paste = "1.0"
plonky2 = "0.2.2"
# supporting latest plonky2
plonky2_crypto = { git = "https://github.com/Lagrange-Labs/plonky2-crypto" }
plonky2_ecdsa = { git = "https://github.com/Lagrange-Labs/plonky2-ecdsa" }
plonky2_ecgfp5 = { git = "https://github.com/Lagrange-Labs/plonky2-ecgfp5" }
plonky2_monolith = "0.1.0"
plonky2x = { git = "https://github.com/Lagrange-Labs/succinctx", branch = "fix-build" }
poseidon2_plonky2 = { git = "https://github.com/Lagrange-Labs/plonky2", branch = "upstream" }
postgres-types = { version = "0.2.6", features = ["with-serde_json-1"] }
rand = "0.8"
rand_chacha = "0.3.1"
revm = { version = "3.5", default-features = false }
rlp = "0.6"
rstest = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serial_test = "3.0"
sha2 = "0.10"
sha256 = { version = "1.5.0", default-features = false }
sha3 = "0.10"
simple_logger = { version = "5.0.0", default-features = false, features = [
  "colors",
] }
sqlparser = "0.49"
stderrlog = { version = "0.6.0", default-features = false }
tabled = { version = "0.19", features = ["ansi"] }
test-log = "0.2.16"
testfile = "0.1.5"
thiserror = "2.0"
tokio = { version = "1.34", features = [
  "sync",
  "macros",
  "macros",
  "rt-multi-thread",
  "fs",
] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
tracing = "0.1.40"

[profile.dev]
# Reference: https://doc.rust-lang.org/cargo/reference/profiles.html#dev
# Proving is too slow without optimizations
opt-level = 3

[profile.release]
# Reference: https://doc.rust-lang.org/cargo/reference/profiles.html#release
# Proving is a bottleneck, enable agressive optimizations.
# Reference: https://nnethercote.github.io/perf-book/build-configuration.html#codegen-units
codegen-units = 1
lto = "fat"

[patch.crates-io]
plonky2 = { git = "https://github.com/Lagrange-Labs/plonky2", branch = "upstream" }
plonky2_monolith = { git = "https://github.com/Lagrange-Labs/monolith" }
plonky2_field = { git = "https://github.com/Lagrange-Labs/plonky2", branch = "upstream" }

[workspace.metadata.release]
publish = false
pre-release-hook = ["sh", "../.github/changelog.sh"]
