[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
bincode.workspace = true
eth_trie.workspace = true
ethers.workspace = true
hashbrown.workspace = true
hex.workspace = true
itertools.workspace = true
log.workspace = true
plonky2.workspace = true
plonky2_crypto.workspace = true
plonky2_ecgfp5.workspace = true
rlp.workspace = true
serde.workspace = true
sha3.workspace = true

recursion_framework = { path = "../recursion-framework" }

[dev-dependencies]
csv.workspace = true
hex.workspace = true
rand.workspace = true
rmp-serde.workspace = true
serde_json.workspace = true
serial_test.workspace = true
tokio.workspace = true

test_utils = { path = "../test-utils" }

[features]
ci = ["test_utils/ci"]
