[package]
name = "groth16_framework"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
bytes.workspace = true
ethereum-types.workspace = true
ethers.workspace = true
hex.workspace = true
log.workspace = true
plonky2.workspace = true
plonky2x.workspace = true
revm.workspace = true
rlp.workspace = true
serde.workspace = true
serde_json.workspace = true
sha3.workspace = true

gnark-utils = { path = "../gnark-utils" }
mapreduce-plonky2 = { path = "../mapreduce-plonky2" }
recursion_framework = { path = "../recursion-framework" }
mp2_common = { path = "../mp2-common"}

[dev-dependencies]
env_logger.workspace = true
itertools.workspace = true
plonky2_ecgfp5.workspace = true
rand.workspace = true
serial_test.workspace = true

mp2_common = { path = "../mp2-common" }
