[package]
name = "groth16_framework"
version = "2.1.1"
edition = "2021"

[dependencies]
alloy.workspace = true
anyhow.workspace = true
hex.workspace = true
log.workspace = true
plonky2.workspace = true
plonky2x.workspace = true
revm.workspace = true
serde.workspace = true
serde_json.workspace = true

gnark-utils = { path = "../gnark-utils" , version = "2.1.1" }
mp2_common = { path = "../mp2-common" , version = "2.1.1" }

[dev-dependencies]
env_logger.workspace = true
itertools.workspace = true
rand.workspace = true
serial_test.workspace = true
sha2.workspace = true
mp2_test = { path = "../mp2-test" , version = "2.1.1" }

recursion_framework = { path = "../recursion-framework" , version = "2.1.1" }
verifiable-db = { path = "../verifiable-db" , version = "2.1.1" }
