[package]
name = "inspect"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
clap.workspace = true
colored.workspace = true
dialoguer.workspace = true
hex.workspace = true
itertools.workspace = true
serde.workspace = true
tabled.workspace = true
tokio.workspace = true

ryhope = { path = "../ryhope" }
mp2_v1 = { path = "../mp2-v1" }
