[package]
name = "inspect"
version = "1.2.1"
edition = "2021"

[dependencies]
anyhow.workspace = true
clap.workspace = true
colored.workspace = true
dialoguer.workspace = true
hex.workspace = true
itertools.workspace = true
serde.workspace = true
tabled.workspace = true
tokio.workspace = true

ryhope = { path = "../ryhope" , version = "1.2.1" }
mp2_v1 = { path = "../mp2-v1" , version = "1.2.1" }
