[package]
name = "integration_tests"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
bincode.workspace = true
ethers.workspace = true
rlp.workspace = true

mp2_common = { path = "../mp2-common" }
mp2_test = { path = "../mp2-test" }
mp2_v1 = { path = "../mp2-v1" }

[dev-dependencies]
serial_test.workspace = true
tokio.workspace = true
