[package]
name = "mapreduce-plonky2"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
bincode.workspace = true
env_logger.workspace = true
eth_trie.workspace = true
ethers.workspace = true
hashbrown.workspace = true
itertools.workspace = true
log.workspace = true
paste.workspace = true
plonky2.workspace = true
plonky2_crypto.workspace = true
plonky2_ecgfp5.workspace = true
rand.workspace = true
rlp.workspace = true
serde.workspace = true
serde_arrays.workspace = true
sha3.workspace = true

recursion_framework = { path = "../recursion-framework" }
mp2_common = { path = "../mp2-common" }

[dev-dependencies]
csv.workspace = true
hex.workspace = true
rmp-serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
serial_test.workspace = true

mp2_test = { path = "../mp2-test" }

[features]
ci = ["mp2_test/ci"]
