[package]
name = "mp2_common"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
bincode.workspace = true
eth_trie.workspace = true
ethers.workspace = true
hashbrown.workspace = true
hex.workspace = true
itertools.workspace = true
log.workspace = true
plonky2.workspace = true
plonky2_crypto.workspace = true
plonky2_ecgfp5.workspace = true
rlp.workspace = true
serde.workspace = true
sha3.workspace = true
rand.workspace = true

[dev-dependencies]
csv.workspace = true
hex.workspace = true
rand.workspace = true
rmp-serde.workspace = true
rstest.workspace = true
serde_json.workspace = true
serial_test.workspace = true
tokio.workspace = true

mp2_test = { path = "../mp2-test" }
recursion_framework = { path = "../recursion-framework" }

[features]
ci = ["mp2_test/ci"]
