[package]
name = "mp2_common"
version = "3.0.0"
edition = "2021"

[dependencies]
alloy.workspace = true
anyhow.workspace = true
bincode.workspace = true
derive_more.workspace = true
eth_trie.workspace = true
ethereum-types.workspace = true
hashbrown.workspace = true
hex.workspace = true
itertools.workspace = true
log.workspace = true
num.workspace = true
plonky2.workspace = true
plonky2_crypto.workspace = true
plonky2_ecdsa.workspace = true
plonky2_ecgfp5.workspace = true
poseidon2_plonky2.workspace = true
rand.workspace = true
rlp.workspace = true
serde.workspace = true
sha3.workspace = true

[dev-dependencies]
hex.workspace = true
rand.workspace = true
rstest.workspace = true
tokio.workspace = true

mp2_test = { path = "../mp2-test" , version = "3.0.0" }

[features]
ci = ["mp2_test/ci"]
original_poseidon = []
