[package]
name = "mp2_test"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy.workspace = true
anyhow.workspace = true
env_logger.workspace = true
eth_trie.workspace = true
log.workspace = true
plonky2.workspace = true
plonky2_ecgfp5.workspace = true
rand.workspace = true
serde.workspace = true
tokio.workspace = true

mp2_common = { path = "../mp2-common" }
recursion_framework = { path = "../recursion-framework" }
ryhope = { path = "../ryhope" }

[features]
ci = []
