[package]
name = "mp2_test"
version = "1.2.2"
edition = "2021"

[dependencies]
alloy.workspace = true
anyhow.workspace = true
env_logger.workspace = true
eth_trie.workspace = true
log.workspace = true
plonky2.workspace = true
plonky2_ecgfp5.workspace = true
rand.workspace = true
serde.workspace = true

mp2_common = { path = "../mp2-common" , version = "1.2.2" }
recursion_framework = { path = "../recursion-framework" , version = "1.2.2" }
ryhope = { path = "../ryhope" , version = "1.2.2" }

[features]
ci = []
