[package]
name = "mp2_v1"   # TODO: fix the name to a meaningful one.
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
bincode.workspace = true
eth_trie.workspace = true
hashbrown.workspace = true
alloy.workspace = true
itertools.workspace = true
log.workspace = true
paste.workspace = true
plonky2.workspace = true
plonky2_crypto.workspace = true
plonky2_ecgfp5.workspace = true
rand.workspace = true
rlp.workspace = true
serde.workspace = true

mp2_common = { path = "../mp2-common" }
recursion_framework = { path = "../recursion-framework" }
ryhope = { path = "../ryhope" }
parsil = { path = "../parsil" }
verifiable-db = { path = "../verifiable-db" }
derive_more = "0.99.18"
hex.workspace = true
serde_json.workspace = true
bb8 = "0.8.5"
bb8-postgres = "0.8.1"
tokio-postgres = "0.7.12"
futures = "0.3.30"

[dev-dependencies]
alloy.workspace = true
csv.workspace = true
hex.workspace = true
serde_json.workspace = true
tokio.workspace = true
serial_test.workspace = true

mp2_test = { path = "../mp2-test" }
parsil = { path = "../parsil" }
env_logger.workspace = true
envconfig = "0.10.0"
test-log = "0.2.16"
jammdb = "0.11.0"
bincode.workspace = true
futures = "0.3.30"
lazy_static = "1.5.0"
rand_chacha = "0.3.1"
bb8 = "0.8.5"
bb8-postgres = "0.8.1"
tokio-postgres = "0.7.11"
sqlparser = "0.49.0"
testfile = "0.1.5"

[features]
original_poseidon = ["mp2_common/original_poseidon"]
