[package]
name = "mp2_v1"   # TODO: fix the name to a meaningful one.
version = "1.2.3"
edition = "2021"

[dependencies]
alloy.workspace = true
anyhow.workspace = true
bb8-postgres.workspace = true
bb8.workspace = true
bincode.workspace = true
derive_more.workspace = true
eth_trie.workspace = true
futures.workspace = true
hashbrown.workspace = true
hex.workspace = true
itertools.workspace = true
log.workspace = true
paste.workspace = true
plonky2.workspace = true
plonky2_crypto.workspace = true
plonky2_ecdsa.workspace = true
plonky2_ecgfp5.workspace = true
rand.workspace = true
rlp.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio-postgres.workspace = true
tracing.workspace = true

mp2_common = { path = "../mp2-common" , version = "1.2.3" }
recursion_framework = { path = "../recursion-framework" , version = "1.2.3" }
ryhope = { path = "../ryhope" , version = "1.2.3" }
parsil = { path = "../parsil" , version = "1.2.3" }
verifiable-db = { path = "../verifiable-db" , version = "1.2.3" }

[dev-dependencies]
alloy.workspace = true
bb8-postgres.workspace = true
bb8.workspace = true
bincode.workspace = true
csv.workspace = true
env_logger.workspace = true
envconfig.workspace = true
futures.workspace = true
hex.workspace = true
jammdb.workspace = true
lazy_static.workspace = true
rand_chacha.workspace = true
serde_json.workspace = true
serial_test.workspace = true
sqlparser.workspace = true
test-log.workspace = true
testfile.workspace = true
tokio-postgres.workspace = true
tokio.workspace = true

mp2_test = { path = "../mp2-test" , version = "1.2.3" }
parsil = { path = "../parsil" , version = "1.2.3" }

[features]
original_poseidon = ["mp2_common/original_poseidon"]
