[package]
name = "parsil"
version = "0.1.0"
edition = "2021"

[lib]
name = "parsil"
path = "src/lib.rs"

[[bin]]
name = "parsil"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
alloy.workspace = true
anyhow.workspace = true
camelpaste = "0.1.0"
log.workspace = true
mp2_common = { path = "../mp2-common" }
plonky2.workspace = true
postgres.workspace = true
ryhope = { path = "../ryhope" }
serde.workspace = true
serde_json.workspace = true
sqlparser = "0.49.0"
verifiable-db = { path = "../verifiable-db" }
clap = { version = "4.5.4", features = ["derive"], optional = true }
stderrlog = { version = "0.6.0", default-features = false, optional = true }
thiserror = "1.0.63"

[features]
cli = ["dep:stderrlog", "dep:clap"]
