[package]
name = "parsil"
version = "1.2.3"
edition = "2021"

[lib]
name = "parsil"
path = "src/lib.rs"

[[bin]]
name = "parsil"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
alloy.workspace = true
anyhow.workspace = true
camelpaste.workspace = true
clap = { workspace = true, optional = true }
log.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlparser.workspace = true
stderrlog = { workspace = true, optional = true }
thiserror.workspace = true

ryhope = { path = "../ryhope" , version = "1.2.3" }
verifiable-db = { path = "../verifiable-db" , version = "1.2.3" }

[features]
cli = ["dep:stderrlog", "dep:clap"]
