[package]
name = "recursion_framework"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
log.workspace = true
plonky2.workspace = true
plonky2_crypto.workspace = true
plonky2_ecgfp5.workspace = true
serde.workspace = true

[dev-dependencies]
bincode.workspace = true
env_logger.workspace = true
plonky2_monolith.workspace = true
rstest.workspace = true
serial_test.workspace = true
