[package]
name = "recursion_framework"
version = "3.0.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
log.workspace = true
plonky2.workspace = true
serde.workspace = true
poseidon2_plonky2.workspace = true

mp2_common = { path = "../mp2-common" , version = "3.0.0" }

[dev-dependencies]
bincode.workspace = true
env_logger.workspace = true
plonky2_monolith.workspace = true
rstest.workspace = true
serial_test.workspace = true

[features]
original_poseidon = ["mp2_common/original_poseidon"]
