[package]
name = "ryhope"
version = "0.1.0"
edition = "2021"

[lib]
name = "ryhope"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
hex.workspace = true
itertools.workspace = true
serde.workspace = true
serde_json.workspace = true

postgres-types = {version =  "0.2.6", features = ["with-serde_json-1"] }
tokio-postgres = { version = "0.7.10", features = ["with-chrono-0_4"] }

bb8 = "0.8.5"
bb8-postgres = "0.8.1"

tokio = { version = "1.34", features = ["sync", "macros"], default-features = false }
futures = "0.3.30"
delegate = "0.12.0"
tracing = "0.1.40"

[dev-dependencies]
rand = "0.8.5"
sha256 = { version = "1.5.0", default-features = false }
