[package]
name = "ryhope"
version = "2.1.1"
edition = "2021"

[lib]
name = "ryhope"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
bb8-postgres.workspace = true
bb8.workspace = true
delegate.workspace = true
futures.workspace = true
hex.workspace = true
itertools.workspace = true
log.workspace = true
postgres-types.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio-postgres.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
rand.workspace = true
sha256.workspace = true
simple_logger.workspace = true
