[package]
name = "tools"
version = "1.2.3"
edition = "2021"

[[bin]]
name = "gen-params"
path = "src/gen-params.rs"

[dependencies]
bincode.workspace = true
blake3 = { version = "1.5.5", features = ["mmap", "rayon"] }
clap = { workspace = true, features = ["derive", "std", "suggestions", "help"] }
groth16_framework.path = "../groth16-framework/"
lgn-messages = { git = "https://github.com/Lagrange-Labs/lgn-coprocessor.git", branch = "main" }
lgn-provers = { git = "https://github.com/Lagrange-Labs/lgn-coprocessor.git", branch = "main" }
mp2_v1.path = "../mp2-v1/"
semver = "1.0.25"
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
verifiable-db.path = "../verifiable-db/"
walkdir = "2.5.0"
