[package]
name = "tools"
version = "2.1.0"
edition = "2021"

[[bin]]
name = "gen-params"
path = "src/gen-params.rs"

[dependencies]
bincode.workspace = true
blake3 = { version = "1.5.5", features = ["mmap", "rayon"] }
clap = { workspace = true, features = ["derive", "std", "suggestions", "help"] }
groth16_framework.path = "../groth16-framework/"
mp2_v1.path = "../mp2-v1/"
semver = "1.0.25"
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
verifiable-db.path = "../verifiable-db/"
walkdir = "2.5.0"
lgn-provers.workspace = true
lgn-messages.workspace = true
