[package]
name = "verifiable-db"
version = "0.1.0"
edition = "2021"

[dependencies]
num.workspace = true
alloy.workspace = true
anyhow.workspace = true
bincode.workspace = true
derive_more.workspace = true
itertools.workspace = true
log.workspace = true
plonky2.workspace = true
plonky2_crypto.workspace = true
plonky2_ecdsa.workspace = true
plonky2_ecgfp5.workspace = true
rand.workspace = true
serde.workspace = true

mp2_common = { path = "../mp2-common" }
recursion_framework = { path = "../recursion-framework" }
ryhope = { path = "../ryhope" }
mp2_test = { path = "../mp2-test" }

[dev-dependencies]
futures.workspace = true
rand.workspace = true
serial_test.workspace = true
tokio.workspace = true

[features]
original_poseidon = ["mp2_common/original_poseidon"]
results_tree = [] # temporary features to disable compiling results_tree code by default, as it is still WiP
