[package]
name = "verifiable-db"
version = "2.1.0"
edition = "2021"

[dependencies]
num.workspace = true
alloy.workspace = true
anyhow.workspace = true
bincode.workspace = true
derive_more= { workspace = true, features = [ "into" ] }
git-version.workspace = true
itertools.workspace = true
log.workspace = true
plonky2.workspace = true
plonky2_crypto.workspace = true
plonky2_ecdsa.workspace = true
plonky2_ecgfp5.workspace = true
rand.workspace = true
serde.workspace = true

mp2_common = { path = "../mp2-common" , version = "2.1.0" }
recursion_framework = { path = "../recursion-framework" , version = "2.1.0" }
ryhope = { path = "../ryhope" , version = "2.1.0" }
mp2_test = { path = "../mp2-test" , version = "2.1.0" }

[dev-dependencies]
futures.workspace = true
rand.workspace = true
serial_test.workspace = true
tokio.workspace = true

[features]
original_poseidon = ["mp2_common/original_poseidon"]
results_tree = [] # temporary features to disable compiling results_tree code by default, as it is still WiP
